# shorter-algorithms

./: .gitignore  CMakeLists.txt  FINDINGS.md  Makefile  README.md
bench/: bench_runner.cpp
cli/: main.cpp
concurrency/: README.md  bounded_buffer.cpp  lockfree_queue.cpp  lockfree_stack.cpp  rw_lock.cpp  spinlock.cpp
database_internals/: README.md  lsm_tree.cpp  skip_list.cpp
distributed_systems/: README.md  consistent_hashing.cpp  crdt_counter.cpp  gossip_protocol.cpp  raft_leader_election.cpp  vector_clocks.cpp
dynamic_programming/: README.md  edit_distance.cpp  knapsack_01.cpp  longest_common_subsequence.cpp
graph/: README.md  articulation_points.cpp  astar_search.cpp  bellman_ford.cpp  bfs_shortest_path.cpp  bipartite_matching.cpp  dijkstra.cpp  floyd_warshall.cpp  ford_fulkerson_maxflow.cpp  kruskal_mst.cpp  pagerank.cpp  prims_mst.cpp  tarjan_scc.cpp  topological_sort.cpp  union_find.cpp
include/: dynamic_programming.hpp  graph.hpp  probabilistic.hpp  rw_lock.hpp  sorting.hpp
optimization/: README.md  branch_and_bound_tsp.cpp  simulated_annealing_tsp.cpp
probabilistic_data_structures/: README.md  bloom_filter.cpp  count_min_sketch.cpp  cuckoo_filter.cpp  hyperloglog.cpp
results/: betweenness_manhattan.csv  betweenness_sf.csv  distribution_comparison.json  divergence_1.05.csv  divergence_1.2.csv  divergence_analysis.json  divergence_comparison.json  divergence_manhattan_1.05.csv  divergence_manhattan_1.2.csv  heuristic_experiment.csv  heuristic_experiment.json  near_optimal_manhattan.csv  near_optimal_sf.csv
scripts/: betweenness.cpp  compare_distributions.py  compare_divergence.py  divergence_analysis.cpp  gen_queries.py  heuristic_experiment.cpp  near_optimal_subgraph.cpp  osm_to_edgelist.py  plot_experiment.py  report.py  run_osm_astar.cpp  run_real_graph.cpp
server/: alpha_selector.hpp  cache.hpp  graph.hpp  main.cpp  router.hpp
similarity_search/: README.md  lsh_minhash.cpp
sorting_searching/: README.md  binary_search.cpp  heap_sort.cpp  merge_sort.cpp  quick_sort.cpp
strings/: README.md  kmp_search.cpp  rabin_karp.cpp  trie.cpp
tests/: test_runner.cpp
